--- a/styles/mobile_style.css
+++ b/styles/mobile_style.css
@@ -19,7 +19,6 @@ FO 3 Blue = 8EFBBA
 }
 body {
     display: grid;
-    justify-content: center;
 }
 #program_box {
     display: grid;
@@ -31,10 +30,9 @@ body {
 #faserip_box {
     display: grid;
     grid-template-columns: 3.4fr 1.6fr;
-    grid-template-rows: 8% 75% 17%;
-    width: 700px;
-    height: 450px;
+    grid-template-rows: 8% 82% 10%;
     padding: 10px;
+    width: 44em;
     grid-row: 1;
     margin-bottom: 20px;
 }
@@ -72,7 +70,7 @@ body {
 }
 .faserip-hoverable {
     display: grid;
-    grid-template-columns: 2fr 1.6fr .6fr .2fr .4fr .2fr;
+    grid-template-columns: 1.7fr 1.7fr .6fr .2fr .4fr .4fr;
     grid-template-rows: 1;
     font-family: Calibri;
     font-size: 24px;
@@ -82,6 +80,8 @@ body {
     margin: 0px;
     color: var(--hover-color);
     text-shadow: .5px 0px 0px var(--faserip-color);
+    user-select: none;
+    align-content:center;
 }
 .faserip-hoverable:hover {
     background-color: var(--hover-color);
@@ -111,6 +111,7 @@ body {
     margin: 5px;
     margin-right: 0px;
     margin-left: 10px;
+    transform:scale(150%, 150%);
     justify-self:center;
 }
 .faserip-button-add {
@@ -122,11 +123,16 @@ body {
     width: 20px;
     margin: 5px;
     margin-right: 0px;
+    transform:scale(150%, 150%);
     justify-self:start;
 }
 .faserip-value {
     font-family: Calibri;
     display: flex;
+    margin-left: -2px;
+    margin-right: 2px;
+    margin-top: 1px;
+    margin-bottom: -1px;
     justify-content: center;
 }
 #points_box {
@@ -143,6 +149,7 @@ body {
     font-size: 48px;
     font-weight: bold;
     color: var(--faserip-color);
+    user-select: none;
 }
 #points_label{
     font-family: 'Times New Roman', Times, serif;
@@ -176,6 +183,8 @@ body {
     height: 300px;
     width: 210px;
     justify-self: center;
+    margin-top: 2em;
+    transform:scale(100%, 120%);
     grid-row: 2;
     grid-column: 1/3;
 }
@@ -200,11 +209,13 @@ body {
 /*powerss*/
 #powers_box{
     display: grid;
-    grid-template-columns: 3.2fr 1.8fr;
-    width: 700px;
+    grid-template-columns: 3.1fr 1.9fr;
+    grid-template-rows: 5% 83% 12%;
+    width: 44em;
     padding: 10px;
     grid-row: 2;
     margin-top: -20px;
+    user-select: none;
 }
 #powers_header {
     grid-column: 1;
@@ -226,29 +237,36 @@ body {
 }
 .powers-hoverable {
     display: grid;
-    grid-template-columns: 2fr 1.6fr .6fr .2fr .4fr .2fr;
+    grid-template-columns: 2.2fr 1.7fr .4fr .2fr .3fr .2fr;
     grid-template-rows: 1;
     font-family: Calibri;
-    font-size: 24px;
+    font-size: 22px;
     padding-top: .2em;
     padding: 5px;
     padding-bottom: .2em;
     margin: 0px;
     color: var(--hover-color);
     text-shadow: .5px 0px 0px var(--faserip-color);
+    align-content:center;
+    user-select: none;
+}
+.powers-label{
+    width: 6.4em;
+    font-size: 24px;
 }
 .talents-hoverable {
     display: grid;
     grid-template-columns: 1.2fr .2fr .1fr .2fr;
     grid-template-rows: 1;
     font-family: Calibri;
-    font-size: 24px;
+    font-size: 22px;
     padding-top: .2em;
     padding: 5px;
     padding-bottom: .2em;
     margin: 0px;
     color: var(--hover-color);
     text-shadow: .5px 0px 0px var(--faserip-color);
+    align-content:center;
 }
 .powers-hoverable:hover, .talents-hoverable:hover {
     background-color: var(--hover-color);
@@ -266,18 +284,20 @@ body {
     text-align: center;
     margin-right: 5px;
     margin-left: -5px;
+    font-size: 24px;
 }
 
 .powers-button-subtract, .talents-button-subtract {
     background-image: var(--faserip-left-img);
     background-size: end;
     background-repeat:no-repeat;
-    background-position: center;
+    background-position: right;
     height: 20px;
     width: 20px;
     margin: 5px;
     margin-right: 0px;
     margin-left: 10px;
+    transform:scale(175%, 175%);
     justify-self:center;
 }
 .powers-button-add, .talents-button-add {
@@ -289,18 +309,33 @@ body {
     width: 20px;
     margin: 5px;
     margin-right: 0px;
+    transform:scale(175%, 175%);
     justify-self:start;
 }
 .powers-value {
     font-family: Calibri;
     display: flex;
     justify-content: center;
+    font-size: 24px;
+    width: 1.5em;
+    margin-top: .1em;
+    margin-right: .1em;
+    margin-left: .3em;
+}
+.talents-value {
+    font-family: Calibri;
+    display: flex;
+    justify-content: center;
+    width: 1.5em;
+    margin-top: .1em;
+    margin-right: .1em;
+    margin-left: .3em;
 }
 #power_points_box {
     grid-column: 1/3;
     grid-row: 3;
     display: grid;
-    grid-template-columns: 33.3% 33.4% 33.3%;
+    grid-template-columns: 30% 40% 30%;
     grid-template-rows: 80% 20%;
     justify-content: center;
 }
@@ -329,15 +364,13 @@ body {
 .slot-button-subtract, .slot-button-add{
     background-size: end;
     background-repeat:no-repeat;
-    background-position: left;
+    background-position: center;
     grid-row: 1;
-    height: 20px;
-    width: 15px;
+    height: 2em;
+    width: 2em;
     margin: 5px;
-    margin-top: 25px;
     margin-right: 0px;
-    transform:scale(150%, 150%);
-    justify-self:start;
+    transform:scale(200%, 200%);
 }
 .slot-button-subtract {
     background-image: var(--faserip-left-img);
@@ -345,15 +378,19 @@ body {
     margin-left: 100px;
     padding-right: -5px;
 }
+#space_between_buttons{
+    width: 8em;
+    grid-column: 2;
+}
 .slot-button-add {
     background-image: var(--faserip-right-img);
-    grid-column: 2;
+    grid-column: 3;
 }
 #point_to_limit_box{
     grid-column: 2;
     grid-row: 1/3;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 30% 40% 30%;
     grid-template-rows: 80% 20%;
 }
 #power_limit_value {
@@ -379,18 +416,16 @@ body {
     text-shadow: .5px 0px 0px var(--faserip-color);
 }
 #convert_points_label{
-    grid-column: 1/3;
+    grid-column: 1/4;
     font-size: 20px;
 }
 
 #secondary_statistics {
-    grid-row: 1;
+    grid-row: 1/3;
     grid-column: 2;
     display: grid;
     grid-template-columns: 2fr;
-    grid-template-rows: 8% 60% 26%;
-    width: 280px;
-    height: 450px;
+    grid-template-rows: 5% 50% 45%;
     padding: 10px;
     margin-bottom: 20px;
 }
@@ -401,7 +436,6 @@ body {
     grid-row: 1/4;
     opacity: .3;
     margin: -.25em;
-    
 }
 #statistics_header {
     grid-column: 1;
@@ -414,8 +448,8 @@ body {
     grid-column: 1;
     grid-row: 2;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(10, 1fr);
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -427,7 +461,7 @@ body {
     font-size: 20px;
     padding-top: .2em;
     padding: 5px;
-    padding-bottom: .2.5em;
+    margin-bottom: 1em;
     color: var(--hover-color);
     text-shadow: .5px 0px 0px var(--faserip-color);
 }
@@ -453,10 +487,47 @@ body {
     justify-content:center;
 }
 .race-button {
-    min-width: 68px;
-    max-height: 40px;
+    max-width: 5em;
+    max-height: 5em;
     font-size: 18px;
-    margin: 2px;
+    margin: 10px 2px 10px 2px;
     padding: 0px 2px 0px 2px;
     background-color: lightgrey;
+}
+
+@media only screen and (max-width:428px){
+    #program_box {
+        max-width:428;
+        width: 428;
+    }    
+}
+@media only screen and (max-width:412px) or (max-width:414){
+    #program_box {
+        max-width:412;
+        width: 412;
+    }    
+}
+@media only screen and (max-width:390px) or (max-width:393px){
+    #program_box {
+        max-width:390px;
+        width: 390px;
+    }    
+}
+@media only screen and (max-width:384px) or (max-width:385px){
+    #program_box {
+        max-width:384px;
+        width: 384px;
+    }    
+}
+@media only screen and (max-width:375px){
+    #program_box {
+        max-width:375;
+        width: 375;
+    }    
+}
+@media only screen and (max-width:360px){
+    #program_box {
+        max-width:360;
+        width: 360;
+    }    
 }
